# mttl

./: .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE.md  README.md  SUPPORT.md  azure-pipelines.yml  cluster_alpaca.py  create_mmlu.sh  create_orca_sqs_dataset.py  draw_figure.ipynb  draw_figure_tensorpoly.ipynb  draw_weight.ipynb  eval_gsm.py  eval_gsm_mttl.py  finetune_llama.ipynb  finetune_llama.py  finetune_llama_st.py  gen_alpaca_eval_predictions.py  gen_ni_predictions.py  gen_ni_predictions_bak.py  gen_ni_predictions_my.py  gen_ni_predictions_origin.py  generate_data.py  generate_gsm8k_perturb.py  get_metrics.py  get_zero_shot_eval.py  gsm_evaluator_with_lora_soup.py  latent_variable_routing_eval.py  longform.ipynb  math500_evaluator_with_lora_soup.py  merge_lora_to_backbone_push_to_hf.py  metrics.json  pl_finetune.py  pl_finetune_tune.py  pl_train.py  pl_zeroshot.py  plot_figure.ipynb  push_to_hf.py  pyproject.toml  (+17 more)
configs/: pretrain.yaml
examples/: create_arrow_model.py  train_experts.sh  train_routing_with_peft_experts.py
inst_follow/: cluster_alpaca.py  cluster_alpaca_cbtm_kmeans.ipynb  cluster_alpaca_gpt.ipynb  cluster_alpaca_gpt.py  cluster_cbtm_kmeans.py  cluster_fln_v2_cbtm_kmeans.ipynb  finetune_llama.py  gen_si_sets.ipynb  operator.py  train_cbtm_cluster.py  utils.py
misc/: create_encodings.py  create_ni_dataset.py  create_t0_dataset.py  fetch_knn.py  few_shot_ni_with_gpt.py  gpt_utils.py
mttl/: __init__.py  arguments.py  callbacks.py  config.py  configuration.py  dist_utils.py  get_metrics.py  global_vars.py  logging.py  online_eval.py  pl_finetune.py  pl_train.py  registrable.py  serializable.py  train_utils.py  utils.py
scripts/: create_datasets.sh  few_shot_t0.sh  few_shot_t0_with_ia3.sh  run_codex_eval.sh  (+2 more)
src/: t5.py  (+9 more)
(+1451 files in other folders)
