[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mttl"
version = "0.0.1"
description = "Multi-Task Transfer Learning with Adapters"
readme = "README.md"
requires-python = ">=3.8, <3.10"
dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["mttl"]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/microsoft/mttl"
"Bug Tracker" = "https://github.com/microsoft/mttl/issues"