[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mttl"
version = "0.0.1"
description = "Multi-Task Transfer Learning with Adapters"
readme = "README.md"
requires-python = ">=3.9, <3.12"  # ray don't support 3.12
dynamic = ["dependencies"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = {}


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock>=3.13",
    "pytest-xdist",
    "pre-commit",
    "black",
    "isort",
]

flash-att = [
    "flash-attn>=2.6.0",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/mttl"
"Bug Tracker" = "https://github.com/microsoft/mttl/issues"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"